# murgatchat

./: .env.example  .gitignore  .semgrepignore  DEBUGGING.md  PROGRESS.md  README.md  TESTING.md  docker-compose.e2e.yml  docker-compose.yml
.github/: dependabot.yml
.github/scripts/: format-claude-log.sh
.github/workflows/: claude-fix.yml  claude-review.yml  claude-triage.yml  claude.yml  desktop-installer.yml  release.yml  tests.yml
.zap/: rules.tsv
e2e/: package-lock.json  package.json  playwright.config.js
e2e/tests/: back-cold-start.spec.js  journey.spec.js
load/k6/: chat-load.js
mobile/: .gitignore  App.js  app.config.js  app.json  eas.json  package-lock.json  package.json
mobile/patches/: expo-device+6.0.2.patch
mobile/plugins/: withReleaseSigning.js
mobile/src/: ChatContext.js  api.js  format.js  logbuffer.js  push.js  socket.js  theme.js  version.js
server/: Dockerfile  eslint.config.js  package-lock.json  package.json  vitest.config.js
server/prisma/: schema.prisma
server/scripts/: db-migrate.js
server/src/: anthropic.js  auth.js  crypto.js  cryptoFile.js  github.js  index.js  mail.js  notify.js  push.js  socket.js  storage.js  sweep.js  webpush.js
server/test/: globalSetup.js  setup.js  testEnv.js
web/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src-tauri/: .gitignore  Cargo.toml  installer-hooks.nsh  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: main.rs
(+104 files in other folders)
